--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Loteca da Sorte</string>
+    <string name="name_app">Loteca da Sorte</string>
 </resources>
